# flask-react

./: .gitignore  README.md  main.py  package.json  pyproject.toml  tailwind.config.js
public/: index.html
src/: index.tsx
src/app/: App.test.tsx  App.tsx
src/utils/: csrf.ts
