[tool.poetry]
name = "flask-react"
version = "0.1.0"
description = ""
authors = ["Volker Schiewe <volker.s1994@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.2"
flask = "^1.1.2"
Flask-WTF = "^0.14.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
